tests/valid/boolean_operators/lt_false.rs
/*
return: 0
*/

main(): i32 {
    return 2 < 1;
}