tests/invalid/numbers/wrong_case.rs
/*
compilationExitCode: 2
*/

main(): i32 {
    RETURN 0;
}